--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -294,3 +294,45 @@
   border-radius: 0.25rem;
   cursor: pointer;
 }
+
+.Step-4__wrapper {
+  background: var(--light-gray);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.Step-4__plan {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  color: var(--marine-blue);
+}
+
+.Step-4__divider {
+  width: 100%;
+  border: 0.25px solid var(--cool-gray);
+}
+
+.Step-4__addon {
+  color: var(--cool-gray);
+  display: flex;
+  justify-content: space-between;
+}
+
+.Step-4__addon-price {
+  color: var(--marine-blue);
+}
+
+.Step-4__total-wrapper {
+  color: var(--cool-gray);
+  display: flex;
+  justify-content: space-between;
+}
+
+.Step-4__total {
+  font-weight: 700;
+  color: var(--purplish-blue);
+}
