--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -287,8 +287,8 @@
   <section class="Step-4">
     <h1 class="Step-4__h1">Finishing Up</h1>
     <p class="Step-4__p">Double-check everything looks OK before confirming.</p>
-    <section>
-      <div *ngIf="multiStepForm.value.arcade">
+    <section class="Step-4__wrapper">
+      <div class="Step-4__plan" *ngIf="multiStepForm.value.arcade">
         <p>
           Arcade ({{ multiStepForm.value.isAnnual ? "Yearly" : "Monthly" }})
         </p>
@@ -300,7 +300,7 @@
           }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
         </p>
       </div>
-      <div *ngIf="multiStepForm.value.advanced">
+      <div class="Step-4__plan" *ngIf="multiStepForm.value.advanced">
         <p>
           Advanced ({{ multiStepForm.value.isAnnual ? "Yearly" : "Monthly" }})
         </p>
@@ -312,7 +312,7 @@
           }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
         </p>
       </div>
-      <div *ngIf="multiStepForm.value.pro">
+      <div class="Step-4__plan" *ngIf="multiStepForm.value.pro">
         <p>Pro ({{ multiStepForm.value.isAnnual ? "Yearly" : "Monthly" }})</p>
         <p>
           ${{
@@ -322,10 +322,10 @@
           }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
         </p>
       </div>
-      <div>______________________________</div>
-      <div *ngIf="multiStepForm.value.onlineService">
+      <div class="Step-4__divider"></div>
+      <div class="Step-4__addon" *ngIf="multiStepForm.value.onlineService">
         <p>Online service</p>
-        <p>
+        <p class="Step-4__addon-price">
           +${{
             multiStepForm.value.isAnnual
               ? prices.onlineService.annually
@@ -333,9 +333,9 @@
           }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
         </p>
       </div>
-      <div *ngIf="multiStepForm.value.largerStorage">
+      <div class="Step-4__addon" *ngIf="multiStepForm.value.largerStorage">
         <p>Larger storage</p>
-        <p>
+        <p class="Step-4__addon-price">
           +${{
             multiStepForm.value.isAnnual
               ? prices.largerStorage.annually
@@ -343,9 +343,12 @@
           }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
         </p>
       </div>
-      <div *ngIf="multiStepForm.value.customizableProfile">
-        <p>Customizable Profile</p>
-        <p>
+      <div
+        class="Step-4__addon"
+        *ngIf="multiStepForm.value.customizableProfile"
+      >
+        <p class="Step-4__addon">Customizable Profile</p>
+        <p class="Step-4__addon-price">
           +${{
             multiStepForm.value.isAnnual
               ? prices.customizableProfile.annually
@@ -354,8 +357,14 @@
         </p>
       </div>
     </section>
-    <p>Total (per {{ multiStepForm.value.isAnnual ? "year" : "month" }})</p>
-    <p>{{ multiStepForm.value.isAnnual ? totalAnnually() : totalMonthly() }}</p>
+    <div class="Step-4__total-wrapper">
+      <p>Total (per {{ multiStepForm.value.isAnnual ? "year" : "month" }})</p>
+      <p class="Step-4__total">
+        +${{
+          multiStepForm.value.isAnnual ? totalAnnually() : totalMonthly()
+        }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
+      </p>
+    </div>
   </section>
   <section class="Step-5">
     <img class="Step-5__icon" src="./assets/images/icon-thank-you.svg" alt="" />
