--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -15,6 +15,10 @@
   padding: 2rem 0 6rem 0;
 }
 
+.Form__current-step {
+  transform: translate(0, -4rem);
+}
+
 .Form__progress-step {
   height: 2rem;
   width: 2rem;
