--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 .Form__progress {
@@ -17,6 +19,10 @@
 
 .Form__current-step {
   transform: translate(0, -4rem);
+}
+
+.Form__wrapper {
+  width: 100%;
 }
 
 .Form__progress-step {
