--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -509,7 +509,7 @@
           </p>
         </section>
         <section
-          class="Form-Navigation"
+          class="Form-Navigation__desktop"
           [ngStyle]="{ visibility: stepCounter === 4 ? 'hidden' : '' }"
         >
           <button
