--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -236,8 +236,8 @@
 }
 
 .Step-3__check {
-  width: 1rem;
-  height: 1rem;
+  min-width: 1rem;
+  min-height: 1rem;
 }
 
 .Step-3__button-layout-wrapper {
