--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   --purplish-blue: hsl(243, 100%, 62%);
   --light-gray: hsl(229, 24%, 87%);
   --pastel-blue: hsl(206, 80%, 96%);
+  --strawberry-red: hsl(354, 84%, 57%);
 }
 
 *,
