--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -120,7 +120,9 @@
               placeholder="e.g Stephen King"
               formControlName="name"
             />
+            <p class="Step-1__error" *ngIf="!isName()">Invalid Input</p>
           </div>
+
           <div class="Step-1__input-wrapper">
             <label class="Step-1__label" for="email">Email Address</label>
             <input
@@ -131,6 +133,7 @@
               placeholder="e.g stephenking@lorem.com"
               formControlName="email"
             />
+            <p class="Step-1__error" *ngIf="!isEmail()">Invalid Input</p>
           </div>
           <div class="Step-1__input-wrapper">
             <label class="Step-1__label" for="phone">Phone Number</label>
@@ -142,6 +145,7 @@
               placeholder="e.g +1 234 567 890"
               formControlName="phone"
             />
+            <p class="Step-1__error" *ngIf="!isUSPhone()">Invalid Input</p>
           </div>
         </section>
         <section class="Step-2" *ngIf="stepCounter === 1">
