--- a/src/app/multi-step-form/multi-step-form-steps.component.css
+++ b/src/app/multi-step-form/multi-step-form-steps.component.css
@@ -205,6 +205,13 @@
   gap: 1rem;
 }
 
+.Step-4__change-plan {
+  font-size: 0.8rem;
+  color: var(--cool-gray);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .Step-4__h1 {
   font-size: 1.5rem;
   color: var(--marine-blue);
@@ -213,6 +220,48 @@
 
 .Step-4__p {
   color: var(--cool-gray);
+}
+
+.Step-4__wrapper {
+  background: var(--light-gray);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.Step-4__plan {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  color: var(--marine-blue);
+}
+
+.Step-4__divider {
+  width: 100%;
+  border: 0.25px solid var(--cool-gray);
+}
+
+.Step-4__addon {
+  color: var(--cool-gray);
+  display: flex;
+  justify-content: space-between;
+}
+
+.Step-4__addon-price {
+  color: var(--marine-blue);
+}
+
+.Step-4__total-wrapper {
+  color: var(--cool-gray);
+  display: flex;
+  justify-content: space-between;
+}
+
+.Step-4__total {
+  font-weight: 700;
+  color: var(--purplish-blue);
 }
 
 /* Step 5 */
