--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -120,7 +120,9 @@
               placeholder="e.g Stephen King"
               formControlName="name"
             />
-            <p class="Step-1__error" *ngIf="!isName()">Invalid Input</p>
+            <p class="Step-1__error" *ngIf="!isName() && !isNameEmpty()">
+              Invalid Input
+            </p>
           </div>
 
           <div class="Step-1__input-wrapper">
@@ -133,7 +135,9 @@
               placeholder="e.g stephenking@lorem.com"
               formControlName="email"
             />
-            <p class="Step-1__error" *ngIf="!isEmail()">Invalid Input</p>
+            <p class="Step-1__error" *ngIf="!isEmail() && !isEmailEmpty()">
+              Invalid Input
+            </p>
           </div>
           <div class="Step-1__input-wrapper">
             <label class="Step-1__label" for="phone">Phone Number</label>
@@ -145,7 +149,9 @@
               placeholder="e.g +1 234 567 890"
               formControlName="phone"
             />
-            <p class="Step-1__error" *ngIf="!isUSPhone()">Invalid Input</p>
+            <p class="Step-1__error" *ngIf="!isUSPhone() && !isPhoneEmpty()">
+              Invalid Input
+            </p>
           </div>
         </section>
         <section class="Step-2" *ngIf="stepCounter === 1">
@@ -447,6 +453,7 @@
                 }}/{{ multiStepForm.value.isAnnual ? "yo" : "mo" }}
               </p>
             </div>
+            <p class="Step-4__change-plan" (click)="changePlan()">Change</p>
             <div class="Step-4__divider"></div>
             <div
               class="Step-4__addon"
