Done and working! refactor and clean up

--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -104,6 +104,14 @@
   cursor: pointer;
 }
 
+.Form-Navigation__confirm {
+  background: var(--purplish-blue);
+  color: white;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 670px) {
   .Form {
     justify-content: space-between;
