figure out how to change favicon

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@
 html {
   font-family: "Barlow Semi Condensed", sans-serif;
   font-family: "Ubuntu", sans-serif;
-  background: var(--light-gray);
+  background: var(--pastel-blue);
 }
 
 body {
